<resources>
    <!-- All Application Strings -->
    <string name="app_name">PhotoShare</string>
    <string name="title_activity_settings_home">activity_settings_home</string>

    <!-- All Button Text Strings -->
    <string name="button_text_start">Start</string>
    <string name="button_text_timeline">Timeline</string>
    <string name="button_text_join">Join</string>
    <string name="button_text_settings">Settings</string>
    <string name="button_text_share">Share</string>
    <string name="button_text_leave">Leave</string>
    <string name="button_text_edit">Edit</string>
    <string name="button_text_pause">Pause</string>
    <string name="button_text_resume">Resume</string>

    <!-- Settings Related Strings -->
    <string name="button_text_settings_profile">Profile</string>
    <string name="button_text_settings_notifications">Notifications</string>
    <string name="button_text_settings_preferences">Preferences</string>
    <string name="button_text_settings_update_profile">Update Profile</string>
    <string name="button_text_settings_update_password">Update Password</string>
    <string name="button_text_settings_logout">Logout</string>
    <string name="button_text_save_changes">Save Changes</string>
    <string name="button_text_changepassword">Change Password</string>
    <string name="textview_text_update_profile">Update Profile</string>
    <string name="textview_text_oldpassword">Old Password</string>
    <string name="textview_text_newpassword">Enter New Password</string>
    <string name="textview_text_newpassword_2">Enter New Password Again</string>

    <!-- Preference Settings Related Strings -->
    <string name="switch_text_preferences_darkmode">Allow Dark Mode</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- All Menu Related Strings -->
    <string name="menu_join_scanQRcode">Scan a QR Code</string>
    <string name="menu_join_enterLink">Enter a Link</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_share_showQR">Show QR Code</string>
    <string name="menu_share_copyLink">Copy Share Link</string>

    <!-- All Sharing Related Strings -->
    <string name="text_share_via_qrcode">Scan the QR Code to Join</string>

    <!-- All Login Related Strings -->
    <string name="login_text_options">Login or Signup</string>
    <string name="login_text_firstname">First Name</string>
    <string name="login_text_lastname">Last Name</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_username">Username</string>
    <string name="login_text_password">Password</string>
    <string name="login_text_enter_password">Enter Password</string>
    <string name="login_text_retype_password">Enter Password Again</string>
    <string name="login_button_signup">Signup</string>
    <string name="login_button_login">Login</string>
    <string name="login_text_incorrect_info">Incorrect username or password</string>
    <string name="login_text_already_exists_email">This email already exists</string>
    <string name="login_text_already_exists_username">This username already exists</string>



    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>