<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettingsUpdateProfile">

    <!-- Text view for update profile direction -->
    <TextView
        android:id="@+id/textView_update_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/textview_text_update_profile"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Edit Text for username update from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_firstname_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/login_text_firstname"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_update_directions" />

    <!-- Edit Text for username input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_lastname_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/login_text_lastname"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_firstname_field" />

    <!-- Edit Text for username input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_username_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/login_text_username"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastname_field" />

    <!-- Edit Text for email input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_email_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/login_text_email"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username_field" />

    <!-- Button for saving changes submission -->
    <Button
        android:id="@+id/button_signup"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/button_text_save_changes"
        android:textSize="20sp"
        android:layout_marginTop="25sp"
        android:onClick="save_changes"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
