<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettingsUpdatePassword">

    <!-- Text view for update password direction -->
    <TextView
        android:id="@+id/textView_update_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/button_text_settings_update_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Edit Text for old password input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_oldpass_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/textview_text_oldpassword"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_update_directions" />

    <!-- Edit Text for new password (first) input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_pass1_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/textview_text_newpassword"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_oldpass_field" />

    <!-- Edit Text for new password (second) input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_pass2_field"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="25sp"
        android:background="@color/white"
        android:hint="@string/textview_text_newpassword_2"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_pass1_field" />

    <!-- Button for saving changes & submitting -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:text="@string/button_text_changepassword"
        android:textSize="20sp"
        android:layout_marginTop="25sp"
        android:onClick="change_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_pass2_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
