<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <!-- ImageView that will contain the application logo -->
    <ImageView
        android:id="@+id/imageView_app_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="35dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Text view for login direction - is dynamic (login info is wrong) -->
    <TextView
        android:id="@+id/textView_login_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_text_options"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_app_logo" />

    <!-- Edit Text for email input from user
     NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_login_email_input"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="20sp"
        android:background="@color/white"
        android:hint="@string/login_text_email"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_directions" />

    <!-- Edit Text for password input from user
    NEED TO PREVENT MULTIPLE LINES-->
    <EditText
        android:id="@+id/editText_login_password_input"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="20sp"
        android:background="@color/white"
        android:hint="@string/login_text_password"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_email_input" />

    <!-- Button for login -->
    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25sp"
        android:text="@string/login_button_login"
        android:textSize="20sp"
        android:onClick="login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password_input" />

    <!-- Button for signup -->
    <Button
        android:id="@+id/button_login_signup"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="20sp"
        android:text="@string/login_button_signup"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>