<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHomeUnjoined">

    <!-- Page Title: Application Name -->
    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <!-- Button Layout (Unjoined) -->
    <LinearLayout
        android:id="@+id/layout_button_table"
        android:layout_width="382dp"
        android:layout_height="419dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Button Layout - Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <!-- Start Button -->
            <Button
                android:id="@+id/button_start"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:minLines="2"
                android:onClick="startShareGroup"
                android:text="@string/button_text_start"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_play_arrow_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />

            <!-- Button Spacing -->
            <Space
                android:id="@+id/space_buttons_row1"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <!-- Join Button -->
            <Button
                android:id="@+id/button_join"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:minLines="2"
                android:onClick="joinShareGroup"
                android:text="@string/button_text_join"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />
        </TableRow>

        <!-- Button Layout - Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <!-- Timeline Button -->
            <Button
                android:id="@+id/button_timeline"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:minLines="2"
                android:text="@string/button_text_timeline"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_hourglass_bottom_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />

            <!-- Button Spacing -->
            <Space
                android:id="@+id/space_buttons_row2"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <!-- Settings Button -->
            <Button
                android:id="@+id/button_settings"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:minLines="2"
                android:text="@string/button_text_settings"
                android:textSize="22sp"
                android:onClick="openSettings"
                app:icon="@drawable/ic_baseline_settings_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>