<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettingsHome">

    <!-- Page Title: Settings Page -->
    <TextView
        android:id="@+id/settings_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_settings"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <!-- Profile Button -->
    <Button
        android:id="@+id/button_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:onClick="close_settings"
        app:icon="@drawable/ic_baseline_close_24"
        app:iconGravity="start"
        app:iconSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button Layout (Settings) -->
    <LinearLayout
        android:id="@+id/layout_button_table"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Button Layout - Row 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <!-- Profile Button -->
            <Button
                android:id="@+id/button_profile"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:minLines="2"
                android:text="@string/button_text_settings_profile"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_account_circle_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />

        </TableRow>

        <!-- Button Layout - Row 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <!-- Notifications Button -->
            <Button
                android:visibility="gone"
                android:id="@+id/button_notifications"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:minLines="2"
                android:text="@string/button_text_settings_notifications"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_notifications_none_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />

        </TableRow>

        <!-- Button Layout - Row 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <!-- Preferences Button -->
            <Button
                android:visibility="gone"
                android:id="@+id/button_preferences"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:minLines="2"
                android:text="@string/button_text_settings_preferences"
                android:textSize="22sp"
                app:icon="@drawable/ic_baseline_more_horiz_24"
                app:iconGravity="textTop"
                app:iconSize="75dp" />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>